--- a/.envrc.public
+++ b/.envrc.public
@@ -15,7 +15,7 @@ export CI_PROJECT_NAMESPACE='fluidattacks'
 export CI_PROJECT_URL="https://gitlab.com/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
 export CI_REGISTRY='registry.gitlab.com'
 export CI_REGISTRY_IMAGE="${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
-export CI_REPOSITORY_URL="https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@gitlab.com/${CI_PROJECT_NAMESPACE=}/${CI_PROJECT_NAME=}.git"
+export CI_REPOSITORY_URL="https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@gitlab.com/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}.git"
 export CI_COMMIT_REF_SLUG
 export DOCKER_HUB_URL='https://index.docker.io/v1/'
 export FALSE=''
