--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ stages:
   - scheduler
 
 .commit_stages:
-  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|observes|reviews|serves|skims|sorts)/'
+  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|asserts|forces|integrates|observes|reviews|serves|skims|sorts)/'
 
 .common_in_mrs: &common_in_mrs
   rules:
