--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,3 +114,21 @@ common_forces:
     - forces --token "${FORCES_API_TOKEN}" --strict -vv
   interruptible: true
   allow_failure: true
+
+common_sonarcloud_check:
+  <<: *common_in_dev_and_master_branch
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  stage: external
+  tags: [autoscaling]
+  needs: []
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
