--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
 # Organization and project keys
 sonar.organization=fluidattacks
-sonar.projectKey=fluidattacks_integrates
-sonar.host.url=https://sonarcloud.io
+sonar.projectKey=fluidattacks_product
 
 # Project name
-sonar.projectName=integrates
+sonar.projectName=product
 
 # Path is relative to the sonarcloud.properties file. Defaults to .
 # sonar.sources=.
@@ -12,7 +11,8 @@ sonar.projectName=integrates
 # Exclusion for analysis
 sonar.exclusions=\
     integrates/app/migrations/**/*,\
-    skims/test/data/**/*
+    skims/test/data/**/*,\
+    asserts/test/static/**/*
 
 # Exclusion for duplications
 sonar.cpd.exclusions=\
