--- a/integrates/mobile/app.json
+++ b/integrates/mobile/app.json
@@ -12,9 +12,7 @@
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.fluidattacks.integrates",
       "versionCode": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "description": "At Integrates a project’s stakeholders (developers, technicians, management, etc.) can interface with Fluid Attacks hackers. Through Integrates, Fluid Attacks communicates all identified security risks to a client’s systems for prompt, efficient and effective remediation by the client company. It also provides the client company’s decision-makers with real time information regarding their systems’ security and Fluid Attacks project progress.",
     "experiments": {
       "redesignedLogBox": true
@@ -50,12 +48,10 @@
       "icon": "./assets/notification.png"
     },
     "orientation": "portrait",
-    "platforms": [
-      "android",
-      "ios"
-    ],
+    "platforms": ["android", "ios"],
     "primaryColor": "#272727",
     "privacy": "public",
+    "scheme": "com.fluidattacks.integrates",
     "sdkVersion": "38.0.0",
     "slug": "integrates",
     "splash": {
