--- a/integrates/mobile/package.json
+++ b/integrates/mobile/package.json
@@ -15,9 +15,9 @@
   "homepage": "https://fluidattacks.com/integrates",
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
-    "@bugsnag/expo": "7.3.1",
-    "@bugsnag/core": "7.3.0",
-    "@bugsnag/plugin-react": "7.3.1",
+    "@bugsnag/core": "7.3.3",
+    "@bugsnag/expo": "7.3.3",
+    "@bugsnag/plugin-react": "7.3.3",
     "@expo/vector-icons": "10.2.0",
     "@types/react-native": "0.62.18",
     "@types/react-router-native": "5.1.0",
@@ -31,6 +31,8 @@
     "babel-plugin-inline-import": "3.0.0",
     "expo": "38.0.9",
     "expo-app-auth": "9.1.1",
+    "expo-application": "2.2.1",
+    "expo-auth-session": "1.4.1",
     "expo-constants": "9.1.1",
     "expo-device": "2.2.1",
     "expo-google-app-auth": "8.1.2",
@@ -40,13 +42,14 @@
     "expo-permissions": "9.0.1",
     "expo-secure-store": "9.0.1",
     "expo-updates": "0.2.14",
+    "expo-web-browser": "8.3.1",
     "graphql": "14.7.0",
     "graphql-tag": "2.10.4",
-    "i18next": "19.6.3",
+    "i18next": "19.7.0",
     "intl": "1.2.5",
     "lodash": "4.17.20",
     "react": "16.11.0",
-    "react-i18next": "11.7.0",
+    "react-i18next": "11.7.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-paper": "4.0.1",
     "react-native-svg": "12.1.0",
@@ -56,22 +59,22 @@
     "@apollo/react-testing": "3.1.4",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "26.0.9",
+    "@types/jest": "26.0.10",
     "@types/react-dom": "16.9.8",
     "babel-preset-expo": "8.2.3",
     "bunyan": "1.8.14",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.3",
-    "expo-cli": "3.24.0",
-    "fetch-mock": "9.10.6",
-    "jest": "26.4.0",
+    "expo-cli": "3.25.0",
+    "fetch-mock": "9.10.7",
+    "jest": "26.4.2",
     "jest-expo": "38.0.2",
     "react-dom": "16.13.1",
-    "ts-jest": "26.2.0",
+    "ts-jest": "26.3.0",
     "tslint": "6.1.3",
     "tslint-react": "5.0.0",
     "turtle-cli": "0.17.2",
-    "typescript": "3.9.7"
+    "typescript": "4.0.2"
   },
   "scripts": {
     "lint": "tsc -p tsconfig.json && tslint -p tsconfig.json -t codeFrame",
