--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,7 +127,7 @@ common_sonarcloud_check:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
   cache:
-    key: "${CI_JOB_NAME}"
+    key: "${CI_COMMIT_REF_NAME}-${CI_JOB_NAME}"
     paths:
       - .sonar/cache
   script:
